image cropper opens correctly and is rudimentarily styled

--- a/Resources/Private/JavaScript/Host/Containers/Editors/Image/style.css
+++ b/Resources/Private/JavaScript/Host/Containers/Editors/Image/style.css
@@ -30,3 +30,9 @@ $maxImageHeight: calc(($sidebarWidth - $spacing * 2) / 4 * 3);
     text-align: center;
     overflow: hidden;
 }
+
+.fullscreenImageCropper {
+    background: $dark;
+    width: 100%;
+    height: 100%;
+}
